feat: add command handlers, remove subscription repository as user entity is an aggregate root

--- a/src/SubscriptionManagement.Domain/SubscriptionManagement.Domain.csproj
+++ b/src/SubscriptionManagement.Domain/SubscriptionManagement.Domain.csproj
@@ -8,7 +8,11 @@
 
   <ItemGroup>
     <Folder Include="Handlers\" />
-    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.1.1" />
+    <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
   </ItemGroup>
 
 </Project>
