chore: seed database with some test values

--- a/src/SubscriptionManagementWebApi/appsettings.json
+++ b/src/SubscriptionManagementWebApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "MSSQL": "Server=tcp:127.0.0.1,1433;Initial Catalog=Test;User Id=sa;Password=yourStrong(!)Password;Encrypt=False;TrustServerCertificate=true"
+    "MSSQL": "Server=tcp:127.0.0.1,1433;Initial Catalog=SubscriptionManagement;User Id=sa;Password=yourStrong(!)Password;Encrypt=False;TrustServerCertificate=true"
   },
   "AllowedHosts": "*"
 }
