--- a/src/SubscriptionManagement.Domain/SubscriptionManagement.Domain.csproj
+++ b/src/SubscriptionManagement.Domain/SubscriptionManagement.Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Handlers\" />
+    <Folder Include="Queries\" />
   </ItemGroup>
 
   <ItemGroup>
