test: add integration and unit test samples

--- a/src/SubscriptionManagement.Infrastracture/SubscriptionManagement.Infrastructure.csproj
+++ b/src/SubscriptionManagement.Infrastracture/SubscriptionManagement.Infrastructure.csproj
@@ -23,5 +23,7 @@
   <ItemGroup>
     <Folder Include="Migrations\" />
   </ItemGroup>
-
+	<ItemGroup>
+		<InternalsVisibleTo Include="SubscriptionManagement.IntegrationTests" />
+	</ItemGroup>
 </Project>
