--- a/src/SubscriptionManagement.Domain/SubscriptionManagement.Domain.csproj
+++ b/src/SubscriptionManagement.Domain/SubscriptionManagement.Domain.csproj
@@ -14,5 +14,7 @@
     <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
   </ItemGroup>
-
+	<ItemGroup>
+		<InternalsVisibleTo Include="SubscriptionManagement.IntegrationTests" />
+	</ItemGroup>
 </Project>
