--- a/src/SubscriptionManagementWebApi/Dockerfile
+++ b/src/SubscriptionManagementWebApi/Dockerfile
@@ -7,16 +7,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["SubscriptionManagementWebApi/SubscriptionManagementWebApi.csproj", "SubscriptionManagementWebApi/"]
-RUN dotnet restore "SubscriptionManagementWebApi/SubscriptionManagementWebApi.csproj"
+COPY ["SubscriptionManagementWebApi/SubscriptionManagement.Api.csproj", "SubscriptionManagementWebApi/"]
+RUN dotnet restore "SubscriptionManagementWebApi/SubscriptionManagement.Api.csproj"
 COPY . .
 WORKDIR "/src/SubscriptionManagementWebApi"
-RUN dotnet build "SubscriptionManagementWebApi.csproj" -c Release -o /app/build
+RUN dotnet build "SubscriptionManagement.Api.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "SubscriptionManagementWebApi.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "SubscriptionManagement.Api.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "SubscriptionManagementWebApi.dll"]
+ENTRYPOINT ["dotnet", "SubscriptionManagement.Api.dll"]
